# webmacs

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
static/: ghostty-web.js  index.html
