[package]
name = "webmacs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
include_dir = "0.7.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
